PLF-7255 Share Activities with Multiple documents (#121)

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -66,6 +66,7 @@
       <version>Version: {0}</version>
       <updatedOn>Modifié le</updatedOn>
       <updatedBy>de</updatedBy>
+      <loadMoreFiles>+{0} fichiers</loadMoreFiles>
     </messages>
     <publicationStates>
       <archived>Archivé</archived>
@@ -82,6 +83,7 @@
     <view>Voir</view>
     <edit>Modifier</edit>
     <download>Télécharger</download>
+    <downloadAll>Télécharger tout</downloadAll>
     <preview>Aperçu</preview>
   </SocialIntegration>
   <UIPopupWindow>
