--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
@@ -16,15 +16,32 @@
 #
 
 UIActivityComposer.label.UIDocActivityComposer=Fichier
-UIComposerDocumentExtension.label.Select_File=Cliquez pour s\u00E9lectionner le fichier \u00E0 partager
+UIComposerDocumentExtension.label.Select_File_To_Upload=S\u00E9lectionner les fichiers
+UIComposerDocumentExtension.label.Select_File_To_Upload_Mobile=S\u00E9lectionner les fichiers
+UIComposerDocumentExtension.label.Select_Drive_Document=Importer depuis vos lecteurs
 UIComposerDocumentExtension.label.Download=T\u00E9l\u00E9charger
 UIComposerDocumentExtension.label.View_File=Voir
 UIComposerDocumentExtension.label.Version=Version
-UIPopupWindow.title.UIOneNodePathSelector=Choisir un fichier
-UIPopupComposer.title.UIDocActivitySelector=S\u00E9lectionnez le fichier
-UIDocActivitySelector.msg.not-a-file=Le fichier n'existe pas ou des erreurs sont survenues.
+UIComposerDocumentExtension.label.megabyte=MO
+UIPopupComposer.title.UIDocActivityPopup=S\u00E9lectionnez les fichiers \u00E0 ins\u00E9rer
 UIComposer.msg.error.Must_select_file=Vous devez d'abord choisir un fichier.
-UIDocActivitySelector.label.cancel=#{word.cancel}
-UIDocActivitySelector.label.selectedfile=S\u00E9lectionner
-UIDSUploadInput.label.Upload=Transf\u00E9rer
+UIDocActivityPopup.label.cancel=#{word.cancel}
+UIDocActivityPopup.label.insert=Ins\u00E9rer
+UIDocActivityPopup.label.limitSizePerFile=Taille limite par fichier: {0} MO
+UIDocActivityPopup.label.limitCountFiles=Vous pouvez uploader {0} fichiers seulement dans le flux d'activit\u00E9s
+UIDocActivityPopup.label.maxSizeReached=Le fichier exc\u00E8de la limite allou\u00e9e: {0} MB
+UIDocActivityPopup.label.maxCountReached=Nombre maximal de fichiers est atteint: {0} fichiers
+UIDocActivityPopup.label.fileAlreadyExists=Le fichier {0} existe d\u00e9j\u00E0 dans la liste
 UIDocActivity.msg.noPermission=Vous n'avez pas le droit de consulter ou t\u00E9l\u00E9charger ce document.
+UIComposerMultiUpload.label.tab.document=Documents
+UIComposerMultiUpload.label.MaxFileSize=Maximum file size is
+UIComposerMultiUpload.label.InvalidCharacters=Invalid characters will be changed by '-'
+UIComposerMultiUpload.label.DropFileMessage=Glissez vos fichiers ici
+UIComposerMultiUpload.label.Close=#{word.close}
+UIComposerMultiUpload.label.MaxFileSizeAlert=The file size exceeds the limit of
+UIComposerMultiUpload.label.or=ou
+UIDocumentSelector.label.documents=Documents
+UIDocumentSelector.label.files=Files
+UIDocumentSelector.label.folders=Folders
+UIDocumentSelector.label.emptyFolder=Empty folder
+UIDocumentSelector.label.emptyResults=No results
