--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
@@ -66,6 +66,7 @@
       <version>Version: {0}</version>
       <updatedOn>Updated on</updatedOn>
       <updatedBy>by</updatedBy>
+      <loadMoreFiles>+{0} more</loadMoreFiles>
     </messages>
     <publicationStates>
       <archived>Archived</archived>
@@ -82,6 +83,7 @@
     <view>View</view>
     <edit>Edit</edit>
     <download>Download</download>
+    <downloadAll>Download all</downloadAll>
     <preview>Preview</preview>
   </SocialIntegration>
   <UIPopupWindow>
