--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_en.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_en.properties
@@ -16,15 +16,32 @@
 #
 
 UIActivityComposer.label.UIDocActivityComposer=File
-UIComposerDocumentExtension.label.Select_File=Click to select the file to attach
+UIComposerDocumentExtension.label.Select_File_To_Upload=upload from your desktop
+UIComposerDocumentExtension.label.Select_File_To_Upload_Mobile=upload from your mobile
+UIComposerDocumentExtension.label.Select_Drive_Document=select from your drives
 UIComposerDocumentExtension.label.Download=Download
 UIComposerDocumentExtension.label.View_File=View
 UIComposerDocumentExtension.label.Version=Version
-UIPopupWindow.title.UIOneNodePathSelector=File Selector
-UIPopupComposer.title.UIDocActivitySelector=Select File
-UIDocActivitySelector.msg.not-a-file=The file does not exist or an error occurred with the selected file.
-UIComposer.msg.error.Must_select_file=You have to select file first.
-UIDocActivitySelector.label.cancel=#{word.cancel}
-UIDocActivitySelector.label.selectedfile=Select
-UIDSUploadInput.label.Upload=Upload
+UIComposerDocumentExtension.label.megabyte=MB
+UIPopupComposer.title.UIDocActivityPopup=Select files
+UIComposer.msg.error.Must_select_file=You have to select file(s) first.
+UIDocActivityPopup.label.cancel=#{word.cancel}
+UIDocActivityPopup.label.insert=Insert
+UIDocActivityPopup.label.limitSizePerFile=Limit size per file {0} MB
+UIDocActivityPopup.label.limitCountFiles=You can attach up to {0} files to your post
+UIDocActivityPopup.label.maxSizeReached=The file {0} exceeds the maximum authorized size {1} MB
+UIDocActivityPopup.label.maxCountReached=You can attach up to {0} files to your post
+UIDocActivityPopup.label.fileAlreadyExists=The file {0} already exists in the list
 UIDocActivity.msg.noPermission=You don't have the rights to View/Download this document.
+UIComposerMultiUpload.label.tab.document=Documents
+UIComposerMultiUpload.label.MaxFileSize=Maximum file size is
+UIComposerMultiUpload.label.InvalidCharacters=Invalid characters will be changed by '-'
+UIComposerMultiUpload.label.DropFileMessage=Drop your files here
+UIComposerMultiUpload.label.Close=#{word.close}
+UIComposerMultiUpload.label.MaxFileSizeAlert=The file size exceeds the limit of
+UIComposerMultiUpload.label.or=or
+UIDocumentSelector.label.documents=Documents
+UIDocumentSelector.label.files=Files
+UIDocumentSelector.label.folders=Folders
+UIDocumentSelector.label.emptyFolder=Empty folder
+UIDocumentSelector.label.emptyResults=No results
