PLF-8383 : edit News

--- a/integ-news/service/src/main/resources/locale/portlet/news/NewsActivityComposer_en.properties
+++ b/integ-news/service/src/main/resources/locale/portlet/news/NewsActivityComposer_en.properties
@@ -1,4 +1,5 @@
 UIActivityComposer.label.UINewsActivityComposer=News
+
 activity.composer.news.title=Title
 activity.composer.news.content=Content
 activity.composer.news.post=Post
@@ -19,3 +20,15 @@ activity.composer.news.summaryDescription=The summary will appear in the descrip
 activity.composer.news.placeholderTitleInput=Type in the title of your article
 activity.composer.news.placeholderSummaryInput=Type in the summary of your article
 activity.composer.news.placeholderContentInput=Type in the Content of your article
+
+activity.edit.news.editNews=Edit news
+activity.edit.news.update=Update
+activity.edit.news.edit=Edit
+activity.edit.news.update.post=Update and post
+activity.edit.news.cancel=Cancel
+
+activity.news.readMore=Read more
+activity.news.writtenBy=Written by
+activity.news.publicationDate=Publication date
+activity.news.lastUpdatedBy=Updated by
+activity.news.lastUpdatedDate=Last update date
