--- a/integ-news/service/src/main/resources/locale/portlet/news/NewsActivityComposer_fr.properties
+++ b/integ-news/service/src/main/resources/locale/portlet/news/NewsActivityComposer_fr.properties
@@ -1,3 +1,5 @@
+UIActivityComposer.label.UINewsActivityComposer=News
+
 activity.composer.news.title=Titre
 activity.composer.news.content=Contenu
 activity.composer.news.post=Publier
@@ -14,3 +16,15 @@ activity.composer.news.btn.cancel=Cancel
 activity.composer.news.summary=Résumé
 activity.composer.news.summaryDescription=Le résumé apparaîtra dans la description de l'actualité.
 activity.composer.news.createNews=Créer une actualité
+
+activity.edit.news.editNews=Modifier une actualité
+activity.edit.news.update=Modifier
+activity.edit.news.edit=Modifier
+activity.edit.news.update.post=Modifier et publier
+activity.edit.news.cancel=Annuler
+
+activity.news.readMore=Lire la Suite
+activity.news.writtenBy=R\u00E9dig\u00E9 par
+activity.news.publicationDate=Date de publication
+activity.news.lastUpdatedBy=Mis \u00E0 jour par
+activity.news.lastUpdatedDate=Date de mise \u00E0 jour
