PLF-8383 : News - Share news

--- a/integ-news/service/src/main/resources/locale/portlet/news/NewsActivityComposer_en.properties
+++ b/integ-news/service/src/main/resources/locale/portlet/news/NewsActivityComposer_en.properties
@@ -17,7 +17,7 @@ activity.composer.news.btn.cancel=Cancel
 activity.composer.news.summary=Summary
 activity.composer.news.createNews=Create a News
 activity.composer.news.summaryDescription=The summary will appear in the description of the News.
-activity.composer.news.placeholderTitleInput=Type in the title of your article
+activity.composer.news.placeholderTitleInput=Type in the description of your article
 activity.composer.news.placeholderSummaryInput=Type in the summary of your article
 activity.composer.news.placeholderContentInput=Type in the Content of your article
 
