--- a/integ-news/service/src/main/resources/locale/portlet/news/NewsShareActivity_en.properties
+++ b/integ-news/service/src/main/resources/locale/portlet/news/NewsShareActivity_en.properties
@@ -1,5 +1,7 @@
 activity.news.shareNews.popupTitle=Share News
-activity.news.shareNews.sharewith=Share with
+activity.news.shareNews.shareWith=Share with
 activity.news.shareNews.sharedActivityPlaceholder=Type in a description for your post. You can mention someone using @
 activity.news.shareNews.share=Share
 activity.news.shareNews.cancel=Cancel
+activity.news.shareNews.message.success=The article {0} is shared successfully in the following space(s):
+activity.news.shareNews.message.error=An error occurred when sharing the article {0}
