PLF-8383 : refactor News details to make code more reusable (#243)
This change creates a new component which displays the whole News details (including edit and share features), in order to reuse this components in several locations : in the activity detail page and in content view template.
This commit goes a bit further by extracting generic components as reusable components : modal, suggester and fileDrop. These components are now defined as AMD modules and can be injected in any other script/component.

--- a/integ-news/service/src/main/resources/locale/portlet/news/News_en.properties
+++ b/integ-news/service/src/main/resources/locale/portlet/news/News_en.properties
@@ -21,6 +21,7 @@ activity.composer.news.placeholderTitleInput=Type in the description of your art
 activity.composer.news.placeholderSummaryInput=Type in the summary of your article
 activity.composer.news.placeholderContentInput=Type in the Content of your article
 
+
 activity.edit.news.editNews=Edit news
 activity.edit.news.update=Update
 activity.edit.news.edit=Edit
@@ -32,3 +33,11 @@ activity.news.writtenBy=Written by
 activity.news.publicationDate=Publication date
 activity.news.lastUpdatedBy=Updated by
 activity.news.lastUpdatedDate=Last update date
+
+activity.news.shareNews.popupTitle=Share News
+activity.news.shareNews.shareWith=Share with
+activity.news.shareNews.sharedActivityPlaceholder=Type in a description for your post. You can mention someone using @
+activity.news.shareNews.share=Share
+activity.news.shareNews.cancel=Cancel
+activity.news.shareNews.message.success=The article {0} is shared successfully in the following space(s):
+activity.news.shareNews.message.error=An error occurred when sharing the article {0}
