--- a/integ-news/service/src/main/resources/locale/portlet/news/News_en.properties
+++ b/integ-news/service/src/main/resources/locale/portlet/news/News_en.properties
@@ -41,3 +41,14 @@ activity.news.shareNews.share=Share
 activity.news.shareNews.cancel=Cancel
 activity.news.shareNews.message.success=The article {0} is shared successfully in the following space(s):
 activity.news.shareNews.message.error=An error occurred when sharing the article {0}
+activity.news.shareNews.spaces.placeholder=Type in a space name
+
+activity.news.confirm=Confirm
+activity.news.label.Pin=Pin article
+activity.news.label.PinNews=Pin news
+activity.news.label.PinMessage=The article <b><i> {0} </i></b> is published in a space with the following access settings:
+activity.news.label.visibility=&nbsp;&nbsp;-Visibility: {0}
+activity.news.label.membership=&nbsp;&nbsp;-Registration: {0}
+activity.news.label.confirmPin=Are you sure to pin it in home page?
+activity.news.label.pin.success=The article is successfully pinned in home page
+activity.news.label.pin.error=Internal error was occured when trying to pin this article in home page
