es-ES injection on 20200624-174254

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_es_ES.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_es_ES.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=Ver
 UIComposerDocumentExtension.label.Version=Versi\u00F3n
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Seleccionar archivos
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=Tienes que seleccionar el archivo primero.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=Adjuntar
 UIDocActivityPopup.label.limitSizePerFile=El tama\u00F1o m\u00E1ximo de archivo es de {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=Puede adjuntar hasta {0} ficheros a su publicaci\u00F3n
 UIDocActivityPopup.label.maxSizeReached=El archivo {0} excede el tama\u00F1o m\u00E1ximo permitido de {1} MB
 UIDocActivityPopup.label.maxCountReached=Puede adjuntar hasta {0} ficheros a su publicaci\u00F3n
