ca injection on 20200624-174254

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_ca.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_ca.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=Veure
 UIComposerDocumentExtension.label.Version=Versi\u00F3
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Seleccionar els fitxers
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=Primer ha de seleccionar el fitxer.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=Adjunta
 UIDocActivityPopup.label.limitSizePerFile=La mida m\u00E0xima del fitxer \u00E9s de {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=Pot adjuntar un m\u00E0xim de {0} fitxers a la seva publicaci\u00F3
 UIDocActivityPopup.label.maxSizeReached=El fitxer {0} supera la mida m\u00E0xima permesa de {1} MB
 UIDocActivityPopup.label.maxCountReached=Pot adjuntar un m\u00E0xim de {0} fitxers a la seva publicaci\u00F3
