--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_el.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_el.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=\u03A0\u03C1\u03BF\u03B2\u03BF\u03BB
 UIComposerDocumentExtension.label.Version=\u0388\u03BA\u03B4\u03BF\u03C3\u03B7
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Select files
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=\u03A0\u03C1\u03AD\u03C0\u03B5\u03B9 \u03BD\u03B1 \u03B5\u03C0\u03B9\u03BB\u03AD\u03BE\u03B5\u03C4\u03B5 \u03AD\u03BD\u03B1 \u03B1\u03C1\u03C7\u03B5\u03AF\u03BF \u03C0\u03C1\u03CE\u03C4\u03B1.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=\u0395\u03C0\u03B9\u03C3\u03CD\u03BD\u03B1\u03C8\u03B7
 UIDocActivityPopup.label.limitSizePerFile=Maximum file size is {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=You can attach up to {0} files to your post
 UIDocActivityPopup.label.maxSizeReached=The file {0} exceeds the maximum allowed size of {1} MB
 UIDocActivityPopup.label.maxCountReached=You can attach up to {0} files to your post
