--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_it.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_it.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=Visualizzare
 UIComposerDocumentExtension.label.Version=Versione
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Selezionare i file
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=Deve prima selezionare il file.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=Allegare
 UIDocActivityPopup.label.limitSizePerFile=La dimensione massima del file \u00E8 {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=Puoi aggiungere fino a {0} file al tuo post
 UIDocActivityPopup.label.maxSizeReached=Il file {0} supera la dimensione massima consentita di {1} MB
 UIDocActivityPopup.label.maxCountReached=Puoi aggiungere fino a {0} file al tuo post
