ja injection on 20200624-174254

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_ja.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_ja.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=\u53C2\u7167
 UIComposerDocumentExtension.label.Version=\u30D0\u30FC\u30B8\u30E7\u30F3
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=\u30D5\u30A1\u30A4\u30EB\u3092\u9078\u629E
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=\u6700\u521D\u306B\u30D5\u30A1\u30A4\u30EB\u3092\u9078\u629E\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=\u6DFB\u4ED8\u3059\u308B
 UIDocActivityPopup.label.limitSizePerFile=\u6700\u5927\u30D5\u30A1\u30A4\u30EB\u30B5\u30A4\u30BA\u306F{0} MB\u3067\u3059\u3002
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=\u3042\u306A\u305F\u306E\u6295\u7A3F\u306B{0} \u30D5\u30A1\u30A4\u30EB\u3092\u6DFB\u4ED8\u3067\u304D\u307E\u3059\u3002
 UIDocActivityPopup.label.maxSizeReached=\u30D5\u30A1\u30A4\u30EB{0} \u306F\u3001\u8A31\u53EF\u3055\u308C\u305F\u30B5\u30A4\u30BA {1} \u3092\u8D8A\u3048\u3066\u3044\u307E\u3059\u3002
 UIDocActivityPopup.label.maxCountReached=\u3042\u306A\u305F\u306E\u6295\u7A3F\u306B{0} \u30D5\u30A1\u30A4\u30EB\u3092\u6DFB\u4ED8\u3067\u304D\u307E\u3059\u3002
