lt injection on 20200624-174254

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_lt.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_lt.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=Rodyti
 UIComposerDocumentExtension.label.Version=Versija
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Select files
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=Pirma j\u016Bs turite pasirinkti fail\u0105.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=Prisegti
 UIDocActivityPopup.label.limitSizePerFile=Maximum file size is {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=You can attach up to {0} files to your post
 UIDocActivityPopup.label.maxSizeReached=The file {0} exceeds the maximum allowed size of {1} MB
 UIDocActivityPopup.label.maxCountReached=You can attach up to {0} files to your post
