nl injection on 20200624-174254

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_nl.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_nl.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=Tonen
 UIComposerDocumentExtension.label.Version=Versie
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Selecteer bestanden
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=U moet het bestand eerst selecteren.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=Bijlage toevoegen
 UIDocActivityPopup.label.limitSizePerFile=De maximale bestandsgrootte is {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=U kunt maximaal {0} bestanden bijvoegen bij uw bericht
 UIDocActivityPopup.label.maxSizeReached=Het bestand {0} overschrijdt de maximaal toegestane grootte van {1} MB
 UIDocActivityPopup.label.maxCountReached=U kunt maximaal {0} bestanden bijvoegen bij uw bericht
