pt-PT injection on 20200624-174254

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_pt_PT.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_pt_PT.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=Visualizar
 UIComposerDocumentExtension.label.Version=Vers\u00E3o
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Selecione os ficheiros
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=Voc\u00EA deve selecionar o ficheiro primeiro.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=Anexar
 UIDocActivityPopup.label.limitSizePerFile=O tamanho m\u00E1ximo do ficheiro \u00E9 {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=Pode anexar um m\u00E1ximo de {0} ficheiros
 UIDocActivityPopup.label.maxSizeReached=O ficheiro {0} excedeu o tamanho m\u00E1ximo permitido de {1} MB
 UIDocActivityPopup.label.maxCountReached=Pode anexar um m\u00E1ximo de {0} ficheiros
