tr injection on 20200624-174254

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_tr.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_tr.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=G\u00F6r\u00FCn\u00FCm
 UIComposerDocumentExtension.label.Version=S\u00FCr\u00FCm
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Dosya se\u00E7
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=\u00D6nce dosya se\u00E7mek zorundas\u0131n\u0131z.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=Ekle
 UIDocActivityPopup.label.limitSizePerFile=Maksimum dosya limiti {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=Mesaj\u0131n\u0131za en fazla {0} dosya ekleyebilirsiniz
 UIDocActivityPopup.label.maxSizeReached={0} Bu dosya boyutu m\u00FCsade edilen {1} MB s\u0131n\u0131r\u0131n\u0131 a\u015F\u0131yor
 UIDocActivityPopup.label.maxCountReached=Mesaj\u0131n\u0131za en fazla {0} dosya ekleyebilirsiniz
