vi injection on 20200624-174254

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_vi.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_vi.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=Xem
 UIComposerDocumentExtension.label.Version=Phi\u00EAn b\u1EA3n
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Select files
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=B\u1EA1n ph\u1EA3i ch\u1ECDn t\u1EC7p tr\u01B0\u1EDBc.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=\u0110\u00EDnh k\u00E8m
 UIDocActivityPopup.label.limitSizePerFile=Maximum file size is {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=You can attach up to {0} files to your post
 UIDocActivityPopup.label.maxSizeReached=The file {0} exceeds the maximum allowed size of {1} MB
 UIDocActivityPopup.label.maxCountReached=You can attach up to {0} files to your post
