fil injection on 20200624-174254

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fil.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fil.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=Tanawin
 UIComposerDocumentExtension.label.Version=Ang Bersyon
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Pumili ng mga payl
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=Kailangan mo munang pumili ng payl.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=Ilakip
 UIDocActivityPopup.label.limitSizePerFile=Ang pinakamalaking sukat ng file ay {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=Maaari kang maglakip ng hanggang {0} na mga file sa iyong post
 UIDocActivityPopup.label.maxSizeReached=Ang file {0} ay lumampas na sa pinakamalaki na pinapayagang sukat na {1} MB
 UIDocActivityPopup.label.maxCountReached=Maaari kang maglakip ng hanggang {0} na mga file sa iyong post
