--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_kab.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_kab.properties
@@ -24,10 +24,14 @@ UIComposerDocumentExtension.label.View_File=View
 UIComposerDocumentExtension.label.Version=Version
 UIComposerDocumentExtension.label.megabyte=MB
 UIPopupComposer.title.UIDocActivityPopup=Select files
+UIPopupComposer.title.UIFolderActivityPopup=Select folder
 UIComposer.msg.error.Must_select_file=You have to select file first.
 UIDocActivityPopup.label.cancel=#{word.cancel}
 UIDocActivityPopup.label.insert=Attach
 UIDocActivityPopup.label.limitSizePerFile=Maximum file size is {0} MB
+UIDocActivityPopup.label.selectDestinationFolder=Select destination folder
+UIDocActivityPopup.label.removeDestinationFolder=Restore to default destination folder
+UIDocActivityPopup.label.selectFolder=Select folder
 UIDocActivityPopup.label.limitCountFiles=You can attach up to {0} files to your post
 UIDocActivityPopup.label.maxSizeReached=The file {0} exceeds the maximum allowed size of {1} MB
 UIDocActivityPopup.label.maxCountReached=You can attach up to {0} files to your post
