--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/social/plugin/link/UILinkComposerPlugin_ur_IN.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/social/plugin/link/UILinkComposerPlugin_ur_IN.properties
@@ -14,8 +14,8 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, see<http://www.gnu.org/licenses/>.
 #
-UIActivityComposer.label.UILinkActivityComposer=\u0644\u0650\u0646\u06A9
-UILinkComposerPlugin.label.Attach=\u0645\u0646\u0633\u0644\u06A9 \u06A9\u0631\u06CC\u06BA
+UIActivityComposer.label.UILinkActivityComposer=Link
+UILinkComposerPlugin.label.Attach=Attach
 UILinkComposerPlugin.label.InputLink=Input Link
 UILinkComposerPlugin.msg.No_Thumbnail=No Thumbnail.
 UILinkComposerPlugin.msg.Previous_Image=Previous Image
