--- a/integ-search-portlet/src/main/resources/locale/portlet/searchadministration/searchadministration_ur_IN.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/searchadministration/searchadministration_ur_IN.properties
@@ -1,6 +1,6 @@
-searchadministration.label=\u062A\u0644\u0627\u0634 \u0627\u0646\u062A\u0638\u0627\u0645\u06CC\u06C1
+searchadministration.label=Search Administration
 searchadministration.contentType.label=Content Type
-searchadministration.description.label=\u062A\u0641\u0635\u06CC\u0644
+searchadministration.description.label=Description
 searchadministration.action.label=#{word.action}
 searchadministration.disable.label=Disable
 searchadministration.alert.save=Search setting has been saved succesfully.
