--- a/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_ur_IN.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_ur_IN.properties
@@ -1,10 +1,10 @@
-unifiedsearch.index.label=\u062A\u0644\u0627\u0634 \u06A9\u0631\u06CC\u06BA
+unifiedsearch.index.label=Search
 unifiedsearch.index.relevancy.label=Relevance
 unifiedsearch.index.date.label=#{word.date}
 unifiedsearch.index.title.label=#{word.title}
 unifiedsearch.index.sortBy.label=Sort By
 unifiedsearch.index.filterBy.label=Filter By
-unifiedsearch.index.allsites.label=\u0633\u0627\u0626\u0679
+unifiedsearch.index.allsites.label=Site
 unifiedsearch.index.contentTypes.label=Content Type
 unifiedsearch.index.showmore.label=Show More Results
 unifiedsearch.edit.label=Search Settings
